style: fix scrollbar style

--- a/src/Components/Orders/OrdersContainer.module.scss
+++ b/src/Components/Orders/OrdersContainer.module.scss
@@ -52,3 +52,14 @@
     margin: 10px 0;
   }
 }
+
+.ordersList::-webkit-scrollbar {
+  display: block;
+  width: 3px;
+}
+
+.ordersList::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-right: none;
+  border-left: none;
+}
